<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="24dp">

        <include
            android:id="@+id/include_layout_login_social_media"
            layout="@layout/layout_login_social_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_view_label_or"
            style="@style/TextAppearance.Custom.H1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/atau"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_layout_login_social_media" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/username_or_email"
            app:layout_constraintTop_toBottomOf="@id/text_view_label_or">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                style="@style/TextAppearance.Custom.H1"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/txt_input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                style="@style/TextAppearance.Custom.H1"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_forgot_password"
            style="@style/TextAppearance.Custom.H1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_input_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingVertical="12dp"
            android:text="@string/login"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/text_view_forgot_password" />

        <Button
            android:id="@+id/btn_login_fingerprint"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingVertical="12dp"
            android:text="@string/login_with_fingerprint"
            android:textAllCaps="false"
            android:textColor="@color/green"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:strokeColor="@color/green" />

        <TextView
            style="@style/TextAppearance.Custom.H1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/register_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_login_fingerprint"
            app:layout_constraintStart_toStartOf="@+id/btn_login_fingerprint"
            app:layout_constraintTop_toBottomOf="@id/btn_login_fingerprint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>