<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_app"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.kutugondrong.cryptoonlinekg.screen.welcome.WelcomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/welcome_fragment" >
        <action
            android:id="@+id/action_welcomeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_welcomeFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.kutugondrong.cryptoonlinekg.screen.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/login_fragment" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.kutugondrong.cryptoonlinekg.screen.home.HomeFragment"
        android:label="@string/nav_title_watch_list"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/streamFragment"
        android:name="com.kutugondrong.cryptoonlinekg.screen.stream.StreamFragment"
        android:label="@string/nav_title_stream"
        tools:layout="@layout/stream_fragment" >
        <action
            android:id="@+id/action_streamFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/streamFragment"
            app:popUpToInclusive="true"/>
    </fragment>

</navigation>